--- a/netflix-clone/src/components/Header.css
+++ b/netflix-clone/src/components/Header.css
@@ -1,54 +1,110 @@
 /* src/components/Header.css */
+
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    background-color: #141414;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-  }
-  
-  .header .logo {
-    font-size: 24px;
-    font-weight: bold;
-    color: white;
-  }
-  
-  .header nav ul {
-    list-style: none;
-    display: flex;
-    gap: 10px;
-    align-items: center;
-  }
-  
-  .header nav ul li a,
-  .header nav ul li button {
-    color: #fff;
-    text-decoration: none;
-    padding: 10px 15px;
-    border-radius: 5px;
-    transition: background 0.3s;
-    border: none;
-    background: none;
-    cursor: pointer;
-  }
-  
-  .header nav ul li a:hover,
-  .header nav ul li button:hover {
-    background-color: #333;
-  }
-  
-  .message-popup {
-    position: fixed;
-    top: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: #4caf50;
-    color: white;
-    padding: 10px;
-    border-radius: 5px;
-    z-index: 1001;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #141414;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+
+.header .logo {
+  font-size: 24px;
+  font-weight: bold;
+  color: white;
+}
+
+.header nav ul {
+  list-style: none;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  margin: 0;
+  justify-content: space-between;
+}
+
+.header nav ul li {
+  margin-right: 20px;
+}
+
+.header nav ul li:last-child {
+  margin-right: 0;
+}
+
+.header nav ul li a,
+.header nav ul li button {
+  color: #fff;
+  text-decoration: none;
+  padding: 10px 15px;
+  border-radius: 5px;
+  transition: background 0.3s;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.header nav ul li a:hover,
+.header nav ul li button:hover {
+  background-color: #333;
+}
+
+.sign-in, .join {
+  margin-left: auto;
+}
+
+.sign-in {
+  color: white !important;
+  border: 1px solid #fff !important;
+  padding: 10px 20px;
+  border-radius: 0px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  width: 100px;
+  height: 40px;
+  /* background-color: #fff !important; */
+}
+
+.sign-in:hover {
+  background-color: #333 !important;
+}
+
+.join {
+  color: #fff !important;
+  background-color: #e50914 !important;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 0px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.join:hover {
+  background-color: #f40612 !important;
+}
+
+.message-popup {
+  position: fixed;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #4caf50;
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  z-index: 1001;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.logo-img {
+  height: 100px;
+  margin-right: 1rem;
+}
+
+.logo-link {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+}
