modifed some movies and shows

--- a/netflix-clone/src/components/Footer.css
+++ b/netflix-clone/src/components/Footer.css
@@ -1,6 +1,6 @@
 /* src/components/Footer.css */
 .footer {
-  background-color: #141414;
+  background-color:#050A30;
   color: #ffffff;
   padding: 20px;
   text-align: center;
