--- a/netflix-clone/src/components/MovieRow.css
+++ b/netflix-clone/src/components/MovieRow.css
@@ -52,7 +52,7 @@
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
-  background-color: #e50914;
+  background-color: #000C66;
   color: white;
   font-size: 16px;
   cursor: pointer;
