--- a/netflix-clone/src/components/VideoPlayer.css
+++ b/netflix-clone/src/components/VideoPlayer.css
@@ -1,12 +1,14 @@
 /* src/components/VideoPlayer.css */
 .video-player {
-  margin-left: 1%;
-    width: 95%;
+  margin-left: 0px;
+  margin-right: 0px;
+    width: 100%;
 
     height: 90vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: black;
+    background-color: #050A30;
+    padding-top: 50px;
   }
   
