--- a/netflix-clone/src/components/VisualizationPage.css
+++ b/netflix-clone/src/components/VisualizationPage.css
@@ -4,24 +4,24 @@
   align-items: center;
   font-family: Arial, sans-serif;
   padding: 20px;
-  background-color: #141414;
+  background-color: #7EC8E3;
   color: #fff;
 }
 
 h2 {
   margin-bottom: 20px;
   font-size: 24px;
-  color: #E50914; /* Netflix red */
+  color: #000C66; /* Netflix red */
 }
 
 .chart-container {
   width: 80%;
   max-width: 800px;
-  height: 400px;
+  height: 550px;
   margin: 20px 0;
   padding: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  background-color: #221f1f;
+  background-color:#050A30;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -31,7 +31,7 @@ h2 {
 .chart-container h3 {
   margin-bottom: 10px;
   font-size: 18px;
-  color: #E50914; /* Netflix red */
+  color: #000C66; /* Netflix red */
 }
 
 .chart-container canvas {
